Truffle interpreter - part 1 (#125)
* truffle nodes

* add Truffle nodes

* add graalvm exports

* add first evaluation test

* add evaluation tests

* add truffle nodes

* add truffle nodes

* fix prelude test

* remove not used code

* add casts

* update prelude tests

* add sub and mul tests

* removed unused code

* fix some warnings

* add casting tests